@@ -1,5 +1,6 @@
 0.11.103
 	+ Do not return a "removed message" with 0 rows removed
+	+ Add field help to model
 0.11.102
 	+ Use the new EBox::Model:Row api
 	+ Do not order iptables rules by priority
